[package]
name = "teloxide-listener"
version = "0.1.0"
edition = "2021"

[features]
webhook = ["axum", "tokio", "tokio-stream", "url", "serde_json", "either"]
either = ["futures-core"]

[dependencies]
axum = { version = "0.4", optional = true }
futures-core = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
teloxide = { version = "0.7", default-features = false }
tokio = { version = "1.16", optional = true }
tokio-stream = { version = "0.1", optional = true }
url = { version = "2.2", optional = true }
