[package]
name = "teloxide-listener"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>"]
description = "A listener extension for teloxide"
repository = "https://github.com/PhotonQuantum/teloxide-listener"
readme = "README.md"
license = "MIT"
keywords = ["teloxide", "telegram", "bot"]
exclude = [
    ".github/*",
    ".mergify.yml",
    "bacon.toml",
    "rust-toolchain.toml",
]

[features]
webhook = ["axum", "tokio", "tokio-stream", "url", "serde_json", "either"]
either = ["futures-core"]

[dependencies]
axum = { version = "0.5", optional = true }
futures-core = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
teloxide = { version = "0.7", default-features = false }
tokio = { version = "1.16", optional = true }
tokio-stream = { version = "0.1", optional = true }
url = { version = "2.2", optional = true }
tracing = "0.1"

[dev-dependencies]
teloxide = { version = "0.7", features = ["dispatching2"], default-features = false }
